# cfa-rt-postprocessing

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  cli.py  function_app.py  gen_anomaly_report.py  gunicorn_config.py  main_functions.py  mermaid_diagram.mjs  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml  python.yaml  render_site.yaml
cfa_rt_postprocessing/: anomaly_report.qmd  azure.py  choropleth.py  cli.py  main_functions.py  timeseries_data_formatting.py
cfa_rt_postprocessing/plotting/: rt.py  timeseries.py
postprocessing_server/: app.py
src/: cli.py
src/cfa_rt_postprocessing/: anomaly_report.qmd  main_functions.py  timeseries_data_formatting.py
src/cfa_rt_postprocessing/plotting/: timeseries.py
tests/: test_round_up_to_friday.py  test_update_prod_index.py
utils/: azure.py  cli.py  main_functions.py
